# georeferencer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/cpp/: displacement_calc.cpp
src/georeferencer/: __init__.py  gcp_generation.py
src/python/georeferencer/: __init__.py  gcp_generation.py  georeferencer.py
tests/: test_displacement_calc.py  test_gcp_generation.py  test_georeferencer.py
