[build-system]
requires = ["pybind11", "setuptools", "setuptools-scm", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "georeferencer"
dynamic = ["version"]
description = "Python package for georeferencing satellite imagery."
readme = "README.md"
authors = [
    { name = "Jacob Nilsson", email = "jacobnilsson95@hotmail.com" },
    { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" },
]
requires-python = ">=3.11"
classifiers = [
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
]
dependencies = [
    "dask>=2025.3.0",
    "pyresample>=1.33.0",
    "rioxarray>=0.18.2",
    "scipy>=1.15.2",
    "pyorbital>1.10.0",
    "numba>=0.61.2",
    "python-geotiepoints>=1.7.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]
standalone = [
    "pygac>=1.7.4",
]
intel = [
    "intel-openmp>=2025.1.0",
]

[tool.setuptools]
package-dir = {"" = "src/python"}
include-package-data = true

[tool.setuptools.package-data]
"georeferencer" = ["*.so"]

[tool.setuptools_scm]

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
skip_gitignore = true
default_section = "THIRDPARTY"
known_first_party = "georeferencer"
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
# In the future, add "B", "S", "N"
select = ["A", "B", "D", "E", "W", "F", "I", "PT", "TID", "C90", "Q", "T10", "T20", "NPY"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert allowed in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[dependency-groups]
dev = [
    "intel-openmp>=2025.1.0",
]
